--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "typeorm": "NODE_ENV=development ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/database/typeorm.config.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^6.7.2",
-    "@nestjs/core": "^6.7.2",
-    "@nestjs/platform-express": "^6.7.2",
-    "@nestjs/typeorm": "^6.2.0",
+    "@nestjs/common": "^6.11.11",
+    "@nestjs/core": "^6.11.11",
+    "@nestjs/platform-express": "^6.11.11",
+    "@nestjs/typeorm": "^6.3.4",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.1",
     "node-config-ts": "^3.0.3",
     "pg": "^7.17.1",
     "reflect-metadata": "^0.1.13",
@@ -34,14 +36,14 @@
     "typeorm": "^0.2.22"
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.9.0",
-    "@nestjs/schematics": "^6.7.0",
+    "@nestjs/cli": "^7.0.2",
+    "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^6.7.1",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
     "ts-jest": "^24.1.0",
