--- a/package.json
+++ b/package.json
@@ -21,37 +21,40 @@
     "typeorm": "NODE_ENV=development ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/database/typeorm.config.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^7.3.2",
-    "@nestjs/core": "^7.3.2",
-    "@nestjs/platform-express": "^7.3.2",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
-    "node-config-ts": "^3.0.3",
-    "pg": "^7.17.1",
+    "node-config-ts": "^3.0.4",
+    "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3",
-    "typeorm": "^0.2.22"
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.0",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.1.2",
+    "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^6.7.1",
-    "@types/express": "^4.17.1",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.5",
+    "@nestjs/testing": "^7.0.0",
+    "@types/express": "^4.17.3",
+    "@types/jest": "25.2.3",
+    "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
-    "jest": "^26.1.0",
-    "minimist": ">=1.2.2",
-    "prettier": "^1.18.2",
+    "@typescript-eslint/eslint-plugin": "3.0.2",
+    "@typescript-eslint/parser": "3.0.2",
+    "eslint": "7.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "jest": "26.0.1",
+    "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.1.2",
-    "ts-loader": "^6.1.1",
-    "ts-node": "^8.4.1",
+    "ts-jest": "26.1.0",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^5.20.1",
-    "typescript": "^3.6.3"
+    "typescript": "^3.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
