--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.0",
+    "@types/bcrypt": "^3.0.0",
+    "bcrypt": "^5.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "node-config-ts": "^3.0.4",
