--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/passport-jwt": "^3.0.3",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "nestjsx-automapper": "^3.0.17",
     "node-config-ts": "^3.0.4",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
