--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
+    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.0",
     "@types/bcrypt": "^3.0.0",
-    "@types/passport-jwt": "^3.0.3",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "nestjsx-automapper": "^3.0.17",
     "node-config-ts": "^3.0.4",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
@@ -47,6 +48,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
