--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/schedule": "^0.4.0",
     "@nestjs/typeorm": "^7.1.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/cron": "^1.7.2",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
+    "cron": "^1.8.2",
     "nestjsx-automapper": "^3.0.17",
     "node-config-ts": "^3.0.4",
     "passport": "^0.4.1",
